--- a/assets/i18n/zh-cmn-Hans.json
+++ b/assets/i18n/zh-cmn-Hans.json
@@ -10,22 +10,43 @@
 	},
 	"finished": "结束",
 	"goods-info-detail": {
+		"addToCart": "加入购物车",
 		"buy": "立刻购买",
 		"cart": "加入购物车",
 		"choice": "选择",
 		"请选择": "请选择"
 	},
 	"hot": {
+		"guessYouLike": "猜你喜欢",
 		"recommend": "热门推荐"
 	},
+	"loading": "拼命加载中...",
 	"login": {
+		"homePage": "首页",
 		"login": "登录",
 		"password": "密码",
+		"register": "注册",
 		"tile": "登录",
 		"username": "用户名"
 	},
 	"personal": {
-		"title": "个人"
+		"all_order": "所有订单",
+		"login": "登录",
+		"logout": "登出",
+		"my-favorite": "我的收藏",
+		"non-payment": "待付款",
+		"non-received": "待收货",
+		"register": "注册",
+		"select-language": "语言",
+		"title": "个人",
+		"user_level": "用户等级",
+		"username": "用户名"
+	},
+	"register": {
+		"login": "登录",
+		"password": "密码",
+		"register": "注册",
+		"username": "用户名"
 	},
 	"search": {
 		"history": "历史记录",
