--- a/assets/i18n/zh-cmn-Hans.json
+++ b/assets/i18n/zh-cmn-Hans.json
@@ -6,18 +6,18 @@
 		"HOME": "首页"
 	},
 	"cart": {
-		"all_selected": "全部选择",
 		"color": "颜色",
 		"settlement": "结算",
 		"shopping_cart": "购物车",
 		"size": "尺寸",
+		"sku_code": "编号",
 		"total": "共计"
 	},
 	"finished": "结束",
 	"goods-info-detail": {
 		"addToCart": "加入购物车",
 		"buy": "立刻购买",
-		"cart": "加入购物车",
+		"cart": "购物车",
 		"choice": "选择",
 		"请选择": "请选择"
 	},
