--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -61,7 +61,9 @@
 	},
 	"order-list": {
 		"color": "colour",
+		"orderDate": "Order date",
 		"orderList": "Order list",
+		"order_sn": "order number",
 		"size": "size"
 	},
 	"personal": {
