--- a/assets/i18n/ja.json
+++ b/assets/i18n/ja.json
@@ -1,22 +1,20 @@
 {
-	"HOME": {
-		"TIPS": "多言語切り替えケース"
-	},
-	"TABS": {
-		"HOME": "ホーム"
-	},
 	"address-add": {
 		"add": "追加する",
-		"addNewAddress": "配送先住所を追加"
+		"addNewAddress": "配送先住所を追加",
+		"inputAddress": "配送先住所を入力してください",
+		"inputSigner": "荷受人の名前を入力してください",
+		"inputSignerMobile": "受信者の連絡先情報を入力してください",
+		"inputUserAddress": "受信者情報を入力してください"
 	},
 	"address-list": {
 		"addShippingAddress": "配送先住所を追加",
 		"shoppingAddress": "配送先住所"
 	},
 	"cart": {
-		"color": "",
+		"color": "色",
 		"nothing": "製品を追加してください...",
-		"price": "",
+		"price": "価格",
 		"settlement": "和解",
 		"shopping_cart": "ショッピングカート",
 		"size": "サイズ",
@@ -40,11 +38,13 @@
 	},
 	"loading": "必死に読み込んでいます...",
 	"login": {
-		"homePage": "ホーム",
+		"inputPassword": "アカウントのパスワードを入力してください",
+		"inputUsername": "アカウントのユーザー名を入力してください",
 		"login": "ログイン",
 		"password": "パスワード",
 		"register": "登録",
 		"tile": "ログイン",
+		"userOrPasswordNotRight": "ユーザー名またはパスワードが間違っています",
 		"username": "ユーザー名"
 	},
 	"order-confirm": {
@@ -57,14 +57,16 @@
 		"goodsAllPrice": "商品の合計価格",
 		"notIncludeFreight": "送料は含まれていません",
 		"order-confirm": "注文確認",
-		"size": ""
+		"size": "サイズ"
 	},
 	"order-list": {
 		"color": "色",
+		"noFreight": "送料は含まれていません",
 		"orderDate": "注文日",
 		"orderList": "注文リスト",
 		"order_sn": "注文番号",
-		"size": "サイズ"
+		"size": "サイズ",
+		"totalPrice": "合計金額"
 	},
 	"personal": {
 		"all_order": "すべての注文",
@@ -80,6 +82,11 @@
 		"username": "ユーザー名"
 	},
 	"register": {
+		"PasswordInconsistent": "2つのパスワードに一貫性がない",
+		"createUserSuccess": "ユーザーの成功を作成する",
+		"inputPassword": "パスワードを入力してください",
+		"inputPasswordAgain": "もう一度パスワードを入力してください",
+		"inputUsername": "ユーザー名を入力してください",
 		"login": "ログイン",
 		"password": "パスワード",
 		"register": "登録",
